--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 </head>
 
 <body>
-<h1>Raven Kemps Reposistories</h1>
+<h1>Deshalecoweney Reposistories</h1>
 <p>
 The inner workings    
-    <br> Heyo
+    <br> Making VR 
 
 </p>    
 
